adjust rules
