# api/src/controllers/Dozenten.php
@@ -13,7 +13,7 @@ $rules = [
     'strasse'    => 'required|string',
     'plz'        => 'required|string',
     'ort'        => 'required|string',
-    'fk_id_land' => 'required|int|positive',
+    'nr_land'    => 'required|int|positive',
     'email'      => 'required|email',
     'telefon'    => 'string',
     'handy'      => 'string',
