# api/src/controllers/Kurse.php
@@ -10,11 +10,11 @@ require_once __DIR__ . '/../system/BaseController.php';
 $rules = [
     'kursnummer'   => 'required|string',
     'kursthema'    => 'required|string',
-    'fk_id_dozent' => 'required|int|positive',
+    'nr_dozent' => 'required|int|positive',
     'inhalt'       => 'string',
     'startdatum'   => 'date',
     'enddatum'     => 'date',
-    'dauer'        => 'float'
+    'dauer'        => 'string'
 ];
 
 $controller = new BaseController('tbl_kurse', 'id_kurs', $rules);
