# api/src/controllers/Lehrbetrieb_Lernende.php
@@ -8,8 +8,8 @@
 require_once __DIR__ . '/../system/BaseController.php';
 
 $rules = [
-    'fk_id_lehrbetrieb' => 'required|int|positive',
-    'fk_id_lernende'    => 'required|int|positive',
+    'nr_lehrbetrieb' => 'required|int|positive',
+    'nr_lernende'    => 'required|int|positive',
     'start'             => 'required|date',
     'ende'              => 'required|date',
     'beruf'             => 'string'
