# api/src/controllers/Lernende.php
@@ -13,7 +13,7 @@ $rules = [
     'strasse'      => 'required|string',
     'plz'          => 'required|string',
     'ort'          => 'required|string',
-    'fk_id_land'   => 'required|int|positive',
+    'nr_land'      => 'required|int|positive',
     'email'        => 'required|email',
     'birthdate'    => 'required|date',
     'geschlecht'   => 'string',
